# neural-amp-modeler-bypass-lv2

./: .gitignore  .gitmodules  CMakeLists.txt  DistrhoPluginInfo.h  Makefile
resources/: manifest.ttl.in  modgui.ttl  neural_amp_modeler.ttl.in  neural_amp_modeler_bypass.ttl.in
src/: CMakeLists.txt  NAMPlugin.cpp  NAMPlugin.hpp  NAMUI.cpp  NAMUI.hpp  nam_lv2.cpp  nam_plugin.cpp  nam_plugin.h  nam_ui.cpp  nam_ui.h  nam_ui_lv2.cpp
